--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - chmod +x ./kubectl
   - sudo mv ./kubectl /usr/local/bin/kubectl
   - mkdir ${HOME}/.kube
-  - echo "$KUBE_CONFIG" > ${HOME}/.kube/config
+  - echo "$KUBE_CONFIG" | base64 --decode > ${HOME}/.kube/config
 
 script:
   - kubectl get contexts
